<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/question_australia_continent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/true_button" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/false_button"
        app:layout_constraintBottom_toTopOf="@id/button_row_guideline"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/false_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        app:layout_constraintStart_toEndOf="@id/true_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_row_guideline"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_row_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/content_desc_prev"
        android:src="@drawable/ic_arrow_prev_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_row_guideline"
        android:layout_margin="16dp"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/content_desc_next"
        android:src="@drawable/ic_arrow_next_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_row_guideline"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        app:layout_constraintBottom_toTopOf="@id/button_row_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
